--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "api-test2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/Marieglahn/api-test/issues"
   },
-  "homepage": "https://github.com/Marieglahn/api-test"
+  "homepage": "https://github.com/Marieglahn/api-test",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "elasticsearch": "^10.1.3",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-nodemon": "^2.0.6",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0"
+  }
 }
